<resources>
    <string name="app_name">bai7.3</string>
    <string name="main_title">Yêu cầu kết quả</string>
    <string name="label_a">Nhập A:</string>
    <string name="label_b">Nhập B:</string>
    <string name="label_kq">Kết quả:</string>
    <string name="btn_request">YÊU CẦU KẾT QUẢ</string>
    <string name="sub_title">Xử lý Kết quả</string>
    <string name="label_aa">Nhận A:</string>
    <string name="label_bb">Nhận B:</string>
    <string name="btn_sum">TRẢ VỀ TỔNG</string>
    <string name="btn_sub">TRẢ VỀ HIỆU</string>
</resources>