<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub_title"
        android:textColor="@color/label_teal"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="6dp"/>

    <!-- Nhận A -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">
        <TextView
            android:id="@+id/labelAA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_aa"
            android:textColor="@color/label_red"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginEnd="4dp"/>
        <EditText
            android:id="@+id/edtAA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:textSize="16sp"
            android:background="@android:color/transparent"/>
    </LinearLayout>
    <!-- Nhận B -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp">
        <TextView
            android:id="@+id/labelBB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_bb"
            android:textColor="@color/label_red"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginEnd="4dp"/>
        <EditText
            android:id="@+id/edtBB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:textSize="16sp"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <!-- Nút -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnsendtong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_sum"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/button_purple"
            android:layout_marginEnd="10dp"
            android:elevation="4dp"/>
        <Button
            android:id="@+id/btnsendhieu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_sub"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/button_purple"
            android:elevation="4dp"/>
    </LinearLayout>
</LinearLayout>
